-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12
-
None
-
9ad3c7aa8c8cd2917191b0b90d048d7d8fcebab5 (qt/qtwebengine/5.12.0)
This seems very similar to QTBUG-67898 - with a PyQt example (but not a C++ example, for some reason), I get an instant crash:
[17858:17875:0923/222446.230319:ERROR:gl_ozone_glx_qt.cpp(76)] glxGetProcAddress not found. Loading progress: 0% Loading started Received signal 11 SEGV_MAPERR 000000000000 #0 0x7fa8a20437ec base::debug::StackTrace::StackTrace() #1 0x7fa8a1e4e571 base::debug::StackTrace::StackTrace() #2 0x7fa8a2042420 base::debug::(anonymous namespace)::StackDumpSignalHandler() #3 0x7fa8b30a23c0 <unknown> #4 0x7fa89d4d5a54 gl::GLSurfaceGLXQt::Initialize() #5 0x7fa89d4d62db ui::GLOzoneGLXQt::CreateOffscreenGLSurface() #6 0x7fa8a327defa gl::init::CreateOffscreenGLSurfaceWithFormat() #7 0x7fa8a327d5a6 gl::init::CreateOffscreenGLSurface() #8 0x7fa8a6ddd2e5 gpu::GpuChannelManager::GetDefaultOffscreenSurface() #9 0x7fa8a6de8245 gpu::GLES2CommandBufferStub::Initialize() #10 0x7fa8a6dcef10 gpu::GpuChannel::OnCreateCommandBuffer() #11 0x7fa8a6dd4ead _ZN4base20DispatchToMethodImplIPN3gpu10GpuChannelEMS2_FvRK28GPUCreateCommandBufferConfigiNS_24UnsafeSharedMemoryRegionEPNS1_13ContextResultEPNS1_12CapabilitiesEESt5tupleIJS4_iS7_EESE_IJS8_SA_EEJLm0ELm1ELm2EEJLm0ELm1EEEEvRKT_T0_OT1_PT2_St16integer_sequenceImJXspT3_EEESP_ImJXspT4_EEE #12 0x7fa8a6dd2b83 _ZN4base16DispatchToMethodIPN3gpu10GpuChannelEMS2_FvRK28GPUCreateCommandBufferConfigiNS_24UnsafeSharedMemoryRegionEPNS1_13ContextResultEPNS1_12CapabilitiesEESt5tupleIJS4_iS7_EESE_IJS8_SA_EEEEvRKT_T0_OT1_PT2_ #13 0x7fa8a6dd0eef _ZN3IPC8MessageTI38GpuChannelMsg_CreateCommandBuffer_MetaSt5tupleIJ28GPUCreateCommandBufferConfigiN4base24UnsafeSharedMemoryRegionEEES2_IJN3gpu13ContextResultENS7_12CapabilitiesEEEE8DispatchINS7_10GpuChannelESD_vMSD_FvRKS3_iS5_PS8_PS9_EEEbPKNS_7MessageEPT_PT0_PT1_T2_ #14 0x7fa8a6dce18c gpu::GpuChannel::OnControlMessageReceived() #15 0x7fa8a6dce629 gpu::GpuChannel::HandleMessageHelper() #16 0x7fa8a6dce711 gpu::GpuChannel::HandleOutOfOrderMessage() #17 0x7fa8a6dd97b4 _ZN4base8internal13FunctorTraitsIMN3gpu10GpuChannelEFvRKN3IPC7MessageEEvE6InvokeIS9_RKNS_7WeakPtrIS3_EEJS7_EEEvT_OT0_DpOT1_ #18 0x7fa8a6dd81ad _ZN4base8internal12InvokeHelperILb1EvE8MakeItSoIRKMN3gpu10GpuChannelEFvRKN3IPC7MessageEERKNS_7WeakPtrIS5_EEJS9_EEEvOT_OT0_DpOT1_ #19 0x7fa8a6dd6611 _ZN4base8internal7InvokerINS0_9BindStateIMN3gpu10GpuChannelEFvRKN3IPC7MessageEEJNS_7WeakPtrIS4_EES6_EEEFvvEE7RunImplIRKSA_RKSt5tupleIJSC_S6_EEJLm0ELm1EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEE #20 0x7fa8a6dd4685 _ZN4base8internal7InvokerINS0_9BindStateIMN3gpu10GpuChannelEFvRKN3IPC7MessageEEJNS_7WeakPtrIS4_EES6_EEEFvvEE3RunEPNS0_13BindStateBaseE #21 0x7fa89d509b46 _ZNO4base12OnceCallbackIFvvEE3RunEv #22 0x7fa8a1e4ef29 base::debug::TaskAnnotator::RunTask() #23 0x7fa8a1eaeea7 base::MessageLoop::RunTask() #24 0x7fa8a1eaf01a base::MessageLoop::DeferOrRunPendingTask() #25 0x7fa8a1eaf397 base::MessageLoop::DoWork() #26 0x7fa8a1eb117f base::MessagePumpDefault::Run() #27 0x7fa8a1eae6ee base::MessageLoop::Run() #28 0x7fa8a1f15112 base::RunLoop::Run() #29 0x7fa8a1fcdb81 base::Thread::Run() #30 0x7fa8a1fce2f2 base::Thread::ThreadMain() #31 0x7fa8a2067c9b base::(anonymous namespace)::ThreadFunc() #32 0x7fa8b3097a9d start_thread #33 0x7fa8b2fc7a43 __GI___clone r8: 0000000000000000 r9: 0000000000000001 r10: 00007fa8340008d0 r11: 0000000000000000 r12: 00007fa84bffcd40 r13: 00007fa834002f60 r14: 00007fa89d4d59b6 r15: 00007fa834005dd8 di: 0000000000000000 si: 0000000000000000 bp: 00007fa84bffcd20 bx: 00007fa834002f60 dx: 0000000000000000 ax: 00007fa8acda46c8 cx: 0000000000000001 sp: 00007fa84bffcb40 ip: 00007fa89d4d5a54 efl: 0000000000010246 cgf: 002b000000000033 erf: 0000000000000004 trp: 000000000000000e msk: 0000000000000000 cr2: 0000000000000000 [end of stack trace] Calling _exit(1). Core file will not be generated.
example code:
import sys from PyQt5.QtCore import QUrl from PyQt5.QtWidgets import QApplication from PyQt5.QtWebEngineWidgets import QWebEngineView app = QApplication(sys.argv) wv = QWebEngineView() wv.load(QUrl('https://www.qutebrowser.org/')) wv.show() app.exec_()
- relates to
-
QTBUG-67898 glxGetProcAddress not found - Q_UNREACHABLE in gl_surface_qt.cpp
-
- Closed
-
-
QTBUG-71488 QtWebEngine: can load wrong libGL.so in certain circumstances
-
- Closed
-
For Gerrit Dashboard: QTBUG-70696 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
244381,4 | Add missing fallback for glxGetProcAddress | 5.12.0 | qt/qtwebengine | Status: MERGED | +2 | 0 |
245276,3 | Add missing refactoring for glxGetProcAddress | 5.12.0 | qt/qtwebengine | Status: MERGED | +2 | 0 |