Add missing refactoring for glxGetProcAddress

Commit 9ad3c7aa fixed regression, however refactoring
which took place 9397251b is missing.

Task-number: QTBUG-70696
Task-number: QTBUG-71742
Change-Id: I4ff3f5fbbd14996478299f51a3d766d2fa1a7017
Reviewed-by: Michael Brüning <michael.bruning@qt.io>